# savasan_iha_otonomi

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: gorev_agaci.xml
src/: main.cpp  mav.parm  mav.tlog  mav.tlog.raw
src/baslagic_gorevi/: KalkisYap.cpp  QrKonumBilgisiGirildiMi.cpp  YeterliYukseklikteMi.cpp  Yuksekligi10mArttir.cpp
src/baslangic_gorevi/: KalkisYap.cpp  KalkisYap.hpp  QrKonumBilgisiGirildiMi.cpp  QrKonumBilgisiGirildiMi.hpp  YeterliYukseklikteMi.cpp  YeterliYukseklikteMi.hpp  Yuksekligi10mArttir.cpp  Yuksekligi10mArttir.hpp
src/savasan_bt/: CMakeLists.txt  package.xml
src/savasan_bt/config/: main_tree.xml
src/savasan_bt/include/savasan_bt/nodes/: dalisa_gec.hpp  dalisi_sonlandir_guvenli_yukseklige_gik.hpp  dalisi_surdur.hpp  gorev_secimi_moduna_gec.hpp  guvenli_bolgeye_yonel.hpp  haberlesme_koptu_mu.hpp  hedefe_x_kadar_yaklastin_mi.hpp  kacinma_moduna_gec.hpp  kamikaze_gorevi_aktif_mi.hpp  kirmizi_alana_mi_girdin.hpp  kodu_tara_ve_kayit_al.hpp  konuma_ilerle.hpp  otonom_inis.hpp  otonom_kalkis.hpp  paketleri_sunucuya_ilet.hpp  pas_gec.hpp  placeholder_savasan.hpp  qr_goruntude_mi.hpp  qr_i_ortala.hpp  qr_konum_bilgisi_girildi_mi.hpp  qr_konum_bilgisini_temizle.hpp  rtl_baslat_ve_cember_at.hpp  savasan_gorevi_aktif_mi.hpp  sinir_veya_irtifa_asildi_mi.hpp  yeterli_yukseklik_mi.hpp  yuksekligi_10m_arttir.hpp  yukseklik_100m_veya_uzeri_mi.hpp  yukseklik_10m_veya_uzeri_mi.hpp  yuz_100m_olana_kadar_tirman.hpp
src/savasan_bt/src/: main.cpp
src/savasan_bt/src/nodes/: haberlesme_koptu_mu.cpp
src/siha_gorevi/: GoreviSonlandir.cpp  GoreviSonlandir.hpp  HedefAramayiAktiflestir.cpp  HedefAramayiAktiflestir.hpp  HedefTekrarGoruntudeMi.cpp  HedefTekrarGoruntudeMi.hpp  HedefTespitEdildiMi.cpp  HedefTespitEdildiMi.hpp  HedefVurusAlanindaMi.cpp  HedefVurusAlanindaMi.hpp  HedefiOrtala.cpp  HedefiOrtala.hpp  IstasyonaPaketiGonder.cpp  IstasyonaPaketiGonder.hpp  KayipAlgoritmasiniBaslat.cpp  KayipAlgoritmasiniBaslat.hpp  KilitlenmeSayaciniIlerlet.cpp  KilitlenmeSayaciniIlerlet.hpp  Sayac4SaniyeOlduMu.cpp  Sayac4SaniyeOlduMu.hpp  SerbestUcusYap.cpp  SerbestUcusYap.hpp  SonVurulanHedefiKaydet.cpp  SonVurulanHedefiKaydet.hpp  ToleransAsildiMi.cpp  ToleransAsildiMi.hpp  ToleransSayaciniIlerlet.cpp  ToleransSayaciniIlerlet.hpp  TumSayaclariSifirla.cpp  TumSayaclariSifirla.hpp
